# microgpt-rs

./: .gitignore  Cargo.toml  README.md  domains.toml
.agent/: optimization.md
.benchmarks/: 003_bomber_wasm_validator.md  004_wasm_batch_zero_copy.md
.docs/: 01_overview.md  02_architecture.md  03_speculative_decoding.md  04_performance.md  05_sudoku.md  06_validator.md  07_adaptation.md  07_gpu_training.md  08_lucebox_techniques.md  09_heuristic-learning.md  09_wasm_validator.md  10_bomber_arena.md  11_monopoly_fsm.md
.handovers/: 001_sudoku_9x9_example.md  002_dynamic_pruning.md  003_perf_optimization.md  004_leviathan_distill.md  006_rest_speculative_decoding.md  009_zero_alloc_rayon.md  010_zero_alloc_rayon.md  011_plans_007_008_014.md  012_wasm_validator_pipeline.md  015_gpu_lora_training_fixes.md
.issues/: 056_game_theory_tit_for_tat.md  057_hot_path_simd_zero_alloc.md  058_softmax_simd_scale_extract_paths.md  060_go_selfplay_komi.md
.plans/: 001_sudoku_9x9_example.md  002_dynamic_pruning.md  003_perf_optimization.md  004_leviathan_distill.md  006_sudoku_tui.md  007_compiler_in_the_loop_clora.md  007_constraint_validator.md  008_wgpu_lora_training.md  009_rest_speculative_decoding.md  010_multilayer_transformer.md  011_systems_optimization.md  012_lucebox_distill.md  013_zero_alloc_rayon.md  014_lucebox_optimizations.md  015_wasm_validator_pipeline.md  017_hierarchical_tactical_ai.md  019_terrain_multilayer_procedural_parallel.md  022_sparse_mlp_twell.md  023_prompt_router.md  024_embedding_router_kv_priming.md  026_ppot_logit_resampling.md  (+29 more)
src/: alloc.rs  (+9 more)
(+192 files in other folders)
